namespaces/live.cloud-platform.service.justice.gov.uk/laa-legal-aid-applications-datastore-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-legal-aid-applications-datastore-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-civil-decide"
    cloud-platform.justice.gov.uk/application: "Service to provide access to the datastore"
    cloud-platform.justice.gov.uk/owner: "Civil Decide: decide@digital.justice.gov.uk: decide@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-legal-aid-applications-datastore.git"
    cloud-platform.justice.gov.uk/team-name: "laa-decide"
    cloud-platform.justice.gov.uk/review-after: ""
